# axiant

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/: auth.py  dependencies.py  main.py  notes.py  test_auth.py  tests.py
app/config/: db.py  settings.py
app/models/: notes.py  token.py
